Course Overview - Accordion CSS

--- a/course-style.css
+++ b/course-style.css
@@ -24,14 +24,28 @@ button.accordion:hover {
 section.panel {
     padding: 0 18px;
     background-color: white;
+    max-height: 0;
     display: none;
+    transition: 0.6s ease-in-out;
+    opacity: 0;
 }
 
 section.panel.show {
-    display: block;
+    opacity: 1;
+    max-height: 100px;
+}
+
+button.accordion:after {
+    content: "\0295";
+    font-size: 11px;
+    color: #FFFFFF;
+    float: right;
+    margin-left: 5px;
+}
+
+button.accordion.active:after {
+    content: "\2796";
 }
 
 
-
-
-/* #a02686 */
+/* END */
