--- a/course-style.css
+++ b/course-style.css
@@ -1,11 +1,11 @@
 /* Accordion CSS */
 
-section.courses {
+.courses {
     width: 50%;
     margin-left: 25%;
 }
 
-button.accordion {
+.accordion {
     background-color: #791d7e;
     color: white;
     padding: 10px;
@@ -16,26 +16,24 @@ button.accordion {
     transition: 0.4s;
 }
 
-button.accordion.active,
-button.accordion:hover {
+.accordion.active,
+.accordion:hover {
     background-color: #a02686;
 }
 
-section.panel {
+.panel {
     padding: 0 18px;
     background-color: white;
-    max-height: 0;
     display: none;
-    transition: 0.6s ease-in-out;
-    opacity: 0;
 }
 
-section.panel.show {
-    opacity: 1;
-    max-height: 100px;
+.panel.show {
+    display: block;
+    top: 100%;
+    left: 0;
 }
 
-button.accordion:after {
+.accordion:after {
     content: "\0295";
     font-size: 11px;
     color: #FFFFFF;
@@ -43,9 +41,18 @@ button.accordion:after {
     margin-left: 5px;
 }
 
-button.accordion.active:after {
+.accordion.active:after {
     content: "\2796";
 }
 
+.course-overview {
+    width: 100%;
+    left: 0;
+    top: 100%;
+    height: 200px;
+    background-color: grey;
+}
 
 /* END */
+
+
