Course Overview - Accordion CSS

--- a/course-style.css
+++ b/course-style.css
@@ -1,5 +1,12 @@
 /* Accordion CSS */
 
+body {
+    max-height: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: antiquewhite;
+}
+
 .courses {
     width: 50%;
     margin-left: 25%;
@@ -22,14 +29,15 @@
 }
 
 .panel {
-    padding: 0 18px;
+    padding: 8px;
     background-color: white;
     display: none;
+    height: 200px;
 }
 
 .panel.show {
     display: block;
-    top: 100%;
+    position: relative;
     left: 0;
 }
 
@@ -45,13 +53,7 @@
     content: "\2796";
 }
 
-.course-overview {
-    width: 100%;
-    left: 0;
-    top: 100%;
-    height: 200px;
-    background-color: grey;
-}
+
 
 /* END */
 
