--- a/course-style.css
+++ b/course-style.css
@@ -20,7 +20,7 @@ body {
     text-align: left;
     border: none;
     outline: none;
-    transition: 0.4s;
+    -webkit-transition: 0.4s ease;
 }
 
 .accordion.active,
@@ -29,14 +29,16 @@ body {
 }
 
 .panel {
-    padding: 8px;
+    padding: 0px;
     background-color: white;
-    display: none;
-    height: 200px;
+    display: block;
+    max-height: 0px;
+    -webkit-transition: 0.5s ease-in-out;
+    overflow: hidden;
 }
 
 .panel.show {
-    display: block;
+    max-height: 300px;
     position: relative;
     left: 0;
 }
@@ -53,7 +55,10 @@ body {
     content: "\2796";
 }
 
-
+.content {
+    display: block;
+    padding: 8px;
+}
 
 /* END */
 
