--- a/nav-style.css
+++ b/nav-style.css
@@ -1,17 +1,20 @@
 
 /* Navigation CSS */
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-color: #791d7e;
-    width: 60%;
+body {
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
 
+nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+    background-color: #791d7e;
+}
 
 
 li {
