--- a/course-style.css
+++ b/course-style.css
@@ -118,6 +118,18 @@ body {
     float: left;
 }
 
+.rgu-link {
+    text-decoration: none;
+    padding: 20px 20px 10px 20px;
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.rgu-link:hover {
+    color: #a02686;
+}
 
 
 /* END */
