--- a/linkstyle.css
+++ b/linkstyle.css
@@ -15,10 +15,9 @@ h2 {
 }
 
 .images:hover>h2{
-    width:70%;
+    width:96%;
     background-color: rgba(80, 13, 104, 0.7);
 }
-
 
 
 #courses {
@@ -26,6 +25,7 @@ h2 {
     height:147px;
     width:400px;
     position: relative;
+    margin-bottom: 8px;
 }
 
 #news {
@@ -33,6 +33,8 @@ h2 {
     height:112px;
     width:180px;
     position: relative;
+    margin-bottom: 8px;
+    float:left;
 }
 
 #research {
@@ -40,6 +42,18 @@ h2 {
     height:112px;
     width:180px;
     position: relative;
+    margin-bottom: 8px;
+    float:right;
+}
+
+
+
+#staffstudents {
+    background-image: url("Images/staffandstudents400x153.png");
+    height:147px;
+    width:400px;
+    position: relative;
+    margin-bottom: 8px;
 }
 
 #industry {
@@ -47,13 +61,7 @@ h2 {
     height:400px;
     width:180px;
     position: relative;
-}
-
-#staffstudents {
-    background-image: url("Images/staffandstudents400x153.png");
-    height:147px;
-    width:400px;
-    position: relative;
+    margin-bottom: 8px;
 }
 
 #about {
@@ -61,13 +69,22 @@ h2 {
     height:112px;
     width:180px;
     position: relative;
+    margin-bottom: 8px;
 }
 
-#courses p {
-    vertical-align: bottom;
-    position: relative;
-    bottom: 0;
+#two{
+    float: right;
 }
 
+#four{
+    float:left;
+}
 
+#image-links{
+    max-width:600px;
+}
+
+#news-res{
+    overflow:auto;
+}
 
