--- a/course-style.css
+++ b/course-style.css
@@ -1,5 +1,9 @@
 /* Accordion CSS */
 
+* {
+    font-size: 12px;
+}
+
 body {
     max-height: 960px;
     margin-left: auto;
@@ -23,7 +27,6 @@ body {
     border: none;
     outline: none;
     -webkit-transition: 0.5s ease-in;
-    font-size: 12px;
 }
 
 .accordion.active,
@@ -98,6 +101,7 @@ body {
     padding: 2.5%;
     display: inline-block;
     float: left;
+    text-align: justify;
 }
 
 .video-link {
@@ -167,6 +171,7 @@ body {
     display: block;
 }
 
+
 iframe {
     position: relative;
     margin-right: auto;
@@ -201,4 +206,25 @@ iframe {
 
 /* END */
 
+/* Course Contact */
+
+.study-contact {
+    max-width: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+}
+
+
+
+.study-contact p {
+    max-width: 50%;
+    padding: 5px;
+    text-align: justify;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* END */
 
