--- a/nav-style.css
+++ b/nav-style.css
@@ -62,7 +62,16 @@ li:hover .sub-menu {
 /* Search Bar */
 
 input[name=search] {
+    display: none;
     width: 70px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 12px;
+    background-color: white;
+    background-image: url("searchicon.png");
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
