--- a/course-style.css
+++ b/course-style.css
@@ -91,25 +91,26 @@ body {
 }
 
 .overview {
-    overflow: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .info {
-    width: 45%;
+    width: auto;
     margin: 0;
     padding: 2.5%;
-    display: inline-block;
-    float: left;
     text-align: justify;
+    background-color: greenyellow;
+    flex-wrap: nowrap;
 }
 
 .video-link {
-    width: 45%;
+    width: 100%;
     margin: 0;
     padding: 2.5%;
-    display: inline-block;
-    float: left;
+    background-color: gold;
 }
 
 .requirements {
