--- a/footer.css
+++ b/footer.css
@@ -1,5 +1,5 @@
 .footerRule{
-    height: 70px;
+    height: 80px;
     width: 60%;
     background-color: #791D7E;
     position: relative;
@@ -9,5 +9,13 @@
 #icon{
     width: 27px;
     height: 27px;
-    margin-top: 20px;
+    padding-left: 10px;
+    margin-top: -5px;
+}
+
+#footerText{
+    color: white;
+    font-weight: 600;
+    font-size: 1em;
+    padding-top: 5px;
 }
