--- a/assets/css/placement-style.css
+++ b/assets/css/placement-style.css
@@ -1,5 +1,5 @@
 main {
-    max-width: 960px;
+    max-width: 900px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -9,5 +9,15 @@ main {
 #placement-title {
     background-color: rgba(80, 13, 104, 1);
     color: white;
-    margin-right: 650px;
+    margin-right: 550px;
 }
+
+#graph{
+    float: left;
+}
+
+div {
+    margin-left: auto;
+    margin-right: auto;
+}
+
