--- a/nav-style.css
+++ b/nav-style.css
@@ -1,5 +1,49 @@
 
+body {
+    width: 70%;
+    margin: auto;
+}
+
+/* Banner */
+
+header {
+    width: 100%;
+}
+
+.banner {
+    width: 1200px;
+    height: 444px;
+    background-image: url("rgu-banner.png");
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#rgu-img {
+}
+
+
+/* END */
+
 /* Navigation CSS */
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
+
+.menu {
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 
 nav ul {
     list-style-type: none;
@@ -7,26 +51,23 @@ nav ul {
     padding: 0;
     text-align: center;
     background-color: #791d7e;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    width: auto;
 }
-
 
 
 li {
     display: inline-block;
     position: relative;
     padding: 10px 15px 10px 15px;
+    text-align: center;
 }
 
 li a {
     text-decoration: none;
-    width: auto;
+    max-width: 200px;
     padding: 2px;
     color: #FFFFFF;
     display: block;
-    text-align: center;
 }
 
 
@@ -34,6 +75,9 @@ ul li:hover {
     background-color: #a02686;
 }
 
+.menu-content.hide {
+    color: green;
+}
 
 .sub-menu {
     position: absolute;
@@ -59,31 +103,117 @@ li:hover .sub-menu {
     display: block;
 }
 
+/* END */
+
 /* Search Bar */
 
-input[name=search] {
-    display: none;
-    width: 70px;
-    box-sizing: border-box;
-    border-radius: 4px;
-    font-size: 12px;
-    background-color: white;
-    background-image: url("searchicon.png");
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
+#search-box {
+    background-color: #791d7e;
+    float: right;
+    position: relative;
+    z-index: 5;
+    display: inline-block;
+    width: 220px;
+    align-items: center;
+    justify-content: center;
 }
+
+input[name=search] {
+    display: inline-block;
+    width: 20px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border-style: none;
+    font-size: 12px;
+    background-color: #791d7e;
+    background-image: url("searchicon.png");
+    background-position: 4px 4px;
+    background-repeat: no-repeat;
+    margin: 5px;
+    padding: 7px 6px 7px 25px;
+    -webkit-transition: width 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out;
+    float: right;
+    position: absolute;
+    top: 0;
+    right: 5px;
+    z-index: -1;
+}
+
+input[name=search]:hover {
+    background-color: white;
+}
+
+#search-btn {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 5px;
+    background-color: white;
+    border: none;
+    padding: 6px 5px;
+    margin: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 14px;
+    transition: 0.3s;
+    float: right;
+    z-index: 5;
+}
+
+#search-btn:hover {
+    background-color: darkgrey;
+}
+
 
 input[name=search]:focus {
     position: relative;
     width: 200px;
+    background-color: white;
+}
+
+input[name=search]:focus + #search-btn {
+    display: block;
+}
+
+
+/* END */
+
+/* Home Button CSS */
+
+#home {
+    background-color: #791d7e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#home-link {
+    padding: 0 10px 0 10px;
+}
+
+#home:hover {
+    background-color: #a02686;
+    cursor: pointer;
 }
 
 /* END */
 
-/* Responsive Nav CSS - @media */
 
 
-/* END */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
