--- a/linkstyle.css
+++ b/linkstyle.css
@@ -139,6 +139,12 @@ main{
 
 @media screen and (max-width: 650px){
 
+    #aboutschool{
+        max-width: 400px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
     #four{
         width:400px;
         float:none;
