--- a/nav-style.css
+++ b/nav-style.css
@@ -1,207 +1,333 @@
+@media screen and (min-width: 787px) {
+    body {
+        width: 70%;
+        margin: auto;
+    }
 
-body {
-    width: 70%;
-    margin: auto;
+    /* Banner */
+
+    header {
+        width: 100%;
+    }
+
+    .banner {
+        width: 90%;
+        height: 444px;
+        background-image: url("rgu-banner.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-start;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #rgu-img {
+    }
+
+
+    /* END */
+
+    /* Navigation CSS */
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .menu {
+        width: 70%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+
+    nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        background-color: #791d7e;
+        width: auto;
+    }
+
+
+    li {
+        display: inline-block;
+        position: relative;
+        padding: 10px 15px 10px 15px;
+        text-align: center;
+    }
+
+    li a {
+        text-decoration: none;
+        max-width: 200px;
+        padding: 2px;
+        color: #FFFFFF;
+        display: block;
+    }
+
+
+    ul li:hover {
+        background-color: #a02686;
+    }
+
+    .menu-content.hide {
+        color: green;
+    }
+
+    .sub-menu {
+        position: absolute;
+        display: none;
+        left: 0;
+        top: 100%;
+        padding: 0;
+        text-align: left;
+        width: 100%;
+    }
+
+    .sub-menu li {
+        display: block;
+        position: relative;
+        padding: 8px;
+    }
+
+    .sub-menu li a {
+        text-align: left;
+    }
+
+    li:hover .sub-menu {
+        display: block;
+    }
+
+    /* END */
+
+    /* Search Bar */
+
+    #search-box {
+        background-color: #791d7e;
+        float: right;
+        position: relative;
+        z-index: 5;
+        display: inline-block;
+        width: 220px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    input[name=search] {
+        display: inline-block;
+        width: 20px;
+        box-sizing: border-box;
+        border-radius: 5px;
+        border-style: none;
+        font-size: 12px;
+        background-color: #791d7e;
+        background-image: url("searchicon.png");
+        background-position: 4px 4px;
+        background-repeat: no-repeat;
+        margin: 5px;
+        padding: 7px 6px 7px 25px;
+        -webkit-transition: width 0.5s ease-in-out;
+        transition: width 0.5s ease-in-out;
+        float: right;
+        position: absolute;
+        top: 0;
+        right: 5px;
+        z-index: -1;
+    }
+
+    input[name=search]:hover {
+        background-color: white;
+    }
+
+    #search-btn {
+        display: none;
+        position: absolute;
+        top: 0;
+        right: 5px;
+        background-color: white;
+        border: none;
+        padding: 6px 5px;
+        margin: 5px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-size: 14px;
+        transition: 0.3s;
+        float: right;
+        z-index: 5;
+    }
+
+    #search-btn:hover {
+        background-color: darkgrey;
+    }
+
+
+    input[name=search]:focus {
+        position: relative;
+        width: 200px;
+        background-color: white;
+    }
+
+    input[name=search]:focus + #search-btn {
+        display: block;
+    }
+
+
+    /* END */
+
+    /* Home Button CSS */
+
+    #home {
+        background-color: #791d7e;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #home-link {
+        padding: 0 10px 0 10px;
+    }
+
+    #home:hover {
+        background-color: #a02686;
+        cursor: pointer;
+    }
+
+    .open-nav {
+        display: none;
+    }
+
+    /* END */
 }
 
-/* Banner */
+@media screen and (max-width: 786px) {
 
-header {
-    width: 100%;
+    /* Header */
+    body {
+        background-color: gold;
+        width: 100%;
+    }
+
+    .banner {
+        width: 100%;
+        height: 444px;
+        background-image: url("rgu-banner.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-start;
+        margin-left: auto;
+        margin-right: auto;
+        position: absolute;
+        left: 0;
+        top: 0;
+        overflow: auto;
+    }
+
+    #school-title {
+        width: 100%;
+        height: auto;
+    }
+
+    #logo {
+        width: 50%;
+        height: auto;
+    }
+
+    .open-nav {
+        display: block;
+        width: 20px;
+        height: 20px;
+    }
+
+    /* Nav */
+    #navigation {
+        background-color: rebeccapurple;
+
+        height: 100%;
+        width: 0px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        padding-top: 60px;
+        overflow-x: hidden;
+        /*-webkit-transition: 0.5s ease-in-out;*/
+    }
+
+    .menu,
+    .sub-menu {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .menu-content {
+        /*        -webkit-transition: 0.4s ease-in-out;*/
+    }
+
+    .menu-section {
+        background-color: green;
+    }
+
+    .menu a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        display: block;
+        font-size: 20px;
+        /*        -webkit-transition: 0.3s;*/
+        color: white;
+    }
+
+    .menu-content.active,
+    .menu a:hover {
+        background-color: lavender;
+        color: grey;
+    }
+
+    .sub-menu {
+        display: block;
+        left: 0;
+        top: 100%;
+        padding: 0;
+        text-align: left;
+        width: 100%;
+        max-height: 0;
+        overflow: hidden;
+        -webkit-transition: 0.5s ease-in-out;
+    }
+
+    .sub-menu.show {
+        max-height: 300px;
+        position: relative;
+        left: 0;
+        background-color: darkgray;
+    }
+
+    .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+    }
+
+    main {
+        -webkit-transition: margin-left 0.5s;
+        padding: 20px;
+    }
+
+    .open-nav {
+        cursor: pointer;
+    }
+
 }
-
-.banner {
-    width: 90%;
-    height: 444px;
-    background-image: url("rgu-banner.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: flex-start;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#rgu-img {
-}
-
-
-/* END */
-
-/* Navigation CSS */
-
-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-}
-
-.menu {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-color: #791d7e;
-    width: auto;
-}
-
-
-li {
-    display: inline-block;
-    position: relative;
-    padding: 10px 15px 10px 15px;
-    text-align: center;
-}
-
-li a {
-    text-decoration: none;
-    max-width: 200px;
-    padding: 2px;
-    color: #FFFFFF;
-    display: block;
-}
-
-
-ul li:hover {
-    background-color: #a02686;
-}
-
-.menu-content.hide {
-    color: green;
-}
-
-.sub-menu {
-    position: absolute;
-    display: none;
-    left: 0;
-    top: 100%;
-    padding: 0;
-    text-align: left;
-    width: 100%;
-}
-
-.sub-menu li {
-    display: block;
-    position: relative;
-    padding: 8px;
-}
-
-.sub-menu li a {
-    text-align: left;
-}
-
-li:hover .sub-menu {
-    display: block;
-}
-
-/* END */
-
-/* Search Bar */
-
-#search-box {
-    background-color: #791d7e;
-    float: right;
-    position: relative;
-    z-index: 5;
-    display: inline-block;
-    width: 220px;
-    align-items: center;
-    justify-content: center;
-}
-
-input[name=search] {
-    display: inline-block;
-    width: 20px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border-style: none;
-    font-size: 12px;
-    background-color: #791d7e;
-    background-image: url("searchicon.png");
-    background-position: 4px 4px;
-    background-repeat: no-repeat;
-    margin: 5px;
-    padding: 7px 6px 7px 25px;
-    -webkit-transition: width 0.5s ease-in-out;
-    transition: width 0.5s ease-in-out;
-    float: right;
-    position: absolute;
-    top: 0;
-    right: 5px;
-    z-index: -1;
-}
-
-input[name=search]:hover {
-    background-color: white;
-}
-
-#search-btn {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 5px;
-    background-color: white;
-    border: none;
-    padding: 6px 5px;
-    margin: 5px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 14px;
-    transition: 0.3s;
-    float: right;
-    z-index: 5;
-}
-
-#search-btn:hover {
-    background-color: darkgrey;
-}
-
-
-input[name=search]:focus {
-    position: relative;
-    width: 200px;
-    background-color: white;
-}
-
-input[name=search]:focus + #search-btn {
-    display: block;
-}
-
-
-/* END */
-
-/* Home Button CSS */
-
-#home {
-    background-color: #791d7e;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#home-link {
-    padding: 0 10px 0 10px;
-}
-
-#home:hover {
-    background-color: #a02686;
-    cursor: pointer;
-}
-
-/* END */
-
-
-
 
 
 
