--- a/css/linkstyle.css
+++ b/css/linkstyle.css
@@ -73,7 +73,7 @@ main{
 
 
 #courses {
-    background-image: url("Images/courseimage400x146.png");
+    background-image: url("../images/courseimage400x146.png");
     height:147px;
     width:400px;
     position: relative;
@@ -83,7 +83,7 @@ main{
 
 
 #news {
-    background-image: url("Images/news190x126.png");
+    background-image: url("../images/news190x126.png");
     height:112px;
     width:190px;
     position: relative;
@@ -92,7 +92,7 @@ main{
 }
 
 #research {
-    background-image: url("Images/research190x120.png");
+    background-image: url("../images/research190x120.png");
     height:112px;
     width:190px;
     position: relative;
@@ -101,7 +101,7 @@ main{
 }
 
 #staffstudents {
-    background-image: url("Images/staffandstudents400x153.png");
+    background-image: url("../images/staffandstudents400x153.png");
     height:144px;
     width:400px;
     position: relative;
@@ -109,7 +109,7 @@ main{
 }
 
 #industry {
-    background-image: url("Images/industry400x191.png");
+    background-image: url("../images/industry400x191.png");
     height:303px;
     width:190px;
     position: relative;
@@ -117,7 +117,7 @@ main{
 }
 
 #about {
-    background-image: url("Images/aboutus190x133.png");
+    background-image: url("../images/aboutus190x133.png");
     height:112px;
     width:190px;
     position: relative;
