--- a/css/nav-style.css
+++ b/css/nav-style.css
@@ -13,7 +13,7 @@
     .banner {
         width: 90%;
         height: 444px;
-        background-image: url("rgu-banner.png");
+        background-image: url("../images/rgu-banner.png");
         background-repeat: no-repeat;
         background-position: center;
         display: flex;
@@ -127,7 +127,7 @@
         border-style: none;
         font-size: 12px;
         background-color: white;
-        background-image: url("searchicon.png");
+        background-image: url("../searchicon.png");
         background-position: 4px 4px;
         background-repeat: no-repeat;
         margin: 5px;
@@ -222,7 +222,7 @@
     .banner {
         width: 100%;
         height: 344px;
-        background-image: url("rgu-banner.png");
+        background-image: url("../images/rgu-banner.png");
         background-repeat: no-repeat;
         background-position: 50% 0;
         display: flex;
@@ -390,7 +390,7 @@
         border-style: none;
         font-size: 16px;
         background-color: #791d7e;
-        background-image: url("searchicon.png");
+        background-image: url("../searchicon.png");
         background-position: 5px 6px;
         background-repeat: no-repeat;
         margin: 4px;
