--- a/css/News&TwitterFeed.css
+++ b/css/News&TwitterFeed.css
@@ -1,6 +1,8 @@
 /* Style the list */
 .rightTabs {
-    float: right;
+    /*float: right;*/
+    height: 300px;
+    width: 300px;
 }
 
 ul.tab {
@@ -130,14 +132,15 @@ ul{
     list-style-type: none;
 }
 
-#twitter-rule{
-    background-color: rgba(80,13,104,0.8);
-    width: 300px;
-    height: 50px;
-    color: white;
-}
+/*#twitter-rule{*/
+    /*background-color: rgba(80,13,104,0.8);*/
+    /*width: 300px;*/
+    /*height: 50px;*/
+    /*color: white;*/
+/*}*/
 
 #twitter-widget{
-    width: 20%;
+    max-height: 100px;
     border: #ddd 1px solid;
+    overflow: hidden;
 }
