Index Page - Full Content

--- a/css/linkstyle.css
+++ b/css/linkstyle.css
@@ -137,6 +137,10 @@ main{
     overflow:auto;
 }
 
+#find-us {
+    max-width: 600px;
+}
+
 @media screen and (max-width: 650px){
 
     #aboutschool{
