--- a/css/News&TwitterFeed.css
+++ b/css/News&TwitterFeed.css
@@ -1,8 +1,8 @@
 /* Style the list */
 .rightTabs {
     /*float: right;*/
-    height: 300px;
-    width: 300px;
+    width: 100%;
+    overflow: hidden;
 }
 
 ul.tab {
@@ -133,14 +133,15 @@ ul{
 }
 
 /*#twitter-rule{*/
-    /*background-color: rgba(80,13,104,0.8);*/
-    /*width: 300px;*/
-    /*height: 50px;*/
-    /*color: white;*/
+     /*background-color: rgba(80,13,104,0.8);*/
+     /*width: 300px;*/
+     /*height: 50px;*/
+     /*color: white;*/
 /*}*/
 
 #twitter-widget{
-    max-height: 100px;
+    max-height: 400px;
     border: #ddd 1px solid;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
