--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,28 +1,33 @@
 main {
     width: 90%;
-    background-color: gold;
+    /*background-color: gold;*/
     display: flex;
     flex-direction: row;
     margin: 5px;
     padding: 0;
+    height: 100%;
 }
 
 #image-content {
-    max-width: 600px;
-    background-color: crimson;
+    /*max-width: 800px;*/
+    /*background-color: crimson;*/
     position: relative;
-    width: 70%;
+    width: 75%;
     padding: 0;
     margin: 5px;
     float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #sidebar {
-    background-color: midnightblue;
+    /*background-color: midnightblue;*/
     position: relative;
-    width: 20%;
-    height: 200px;
-    max-height: 100px;
+    width: 25%;
+    padding: 0;
+    margin: 5px;
 }
 
 footer {
