--- a/assets/css/placement-style.css
+++ b/assets/css/placement-style.css
@@ -12,7 +12,6 @@ main {
 
 #graph {
     float: left;
-    padding-top: 4%;
 }
 
 #info {
@@ -24,6 +23,10 @@ div {
     margin-right: auto;
 }
 
+#buttons {
+    margin-top: -100px;
+    width: 590px;
+}
 
 #video {
     margin-left: 200px;
@@ -37,7 +40,6 @@ div {
     left: 0%;
     transform: translate(0%,-50%);
     -ms-transform: translate(-0%,-50%);
-    float: left;
 }
 
 .w3-display-right {
@@ -46,8 +48,8 @@ div {
     right: 0%;
     transform: translate(0%,-50%);
     -ms-transform: translate(-0%,-50%);
-    margin-left: 508px;
-    float: right;
+    margin-left: 450px;
+
 }
 
 .w3-btn-floating {
