Index Page - Full Content (Responsive)

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,11 @@
 .footerRule{
-    height: 80px;
-    width: 90%;
+    height: 100px;
+    /*width: 90%;*/
     background-color: #791D7E;
     position: relative;
-    padding-left: 0px;
+    padding-left: 0;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
 }
 
 #icon{
@@ -18,6 +20,7 @@
     font-weight: 600;
     font-size: 1em;
     padding-top: 5px;
+    text-align: center;
 }
 
 #sm-icons {
