--- a/css/News&TwitterFeed.css
+++ b/css/News&TwitterFeed.css
@@ -11,7 +11,7 @@ ul.tab {
     padding: 0;
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: rgba(80,13,104,0.8);
+    background-color: #791d7e;
 }
 
 /* Float the list items side by side */
@@ -22,7 +22,7 @@ ul.tab li {
 /* Style the links inside the list items */
 ul.tab li a {
     display: inline-block;
-    text-align: center;
+    text-align: justify;
     padding: 14px 16px;
     text-decoration: none;
     transition: 0.3s;
@@ -32,12 +32,12 @@ ul.tab li a {
 
 /* Change background color of links on hover */
 ul.tab li a:hover {
-    background-color: rgba(70, 25, 104, 1);
+    background-color: #500d68;
 }
 
 /* Create an active/current tablink class */
 #sidebar ul.tab li a:focus, .active {
-    background-color: rgba(80,13,104,1);
+    background-color: #500d68;
 }
 
 /* Style the tab content */
@@ -46,6 +46,7 @@ ul.tab li a:hover {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+    /*height: 550px;*/
 }
 
 .fix, .col-full {
@@ -74,6 +75,7 @@ ul.tab li a:hover {
     font: bold 13px/18px Helvetica, Arial, sans-serif;
     padding: 0;
 }
+
 
 .widget ul li a {
     padding: 0;
@@ -140,7 +142,7 @@ ul{
 /*}*/
 
 #twitter-widget{
-    max-height: 400px;
+    /*max-height: 400px;*/
     border: #ddd 1px solid;
     overflow-y: scroll;
     overflow-x: hidden;
