--- a/css/index-style.css
+++ b/css/index-style.css
@@ -14,6 +14,8 @@
         margin-bottom: 20px;
         padding: 0;
         height: 100%;
+        position: relative;
+        z-index: 1;
     }
 
     #image-content {
@@ -37,6 +39,10 @@
 
     .tabcontent {
         height: 550px;
+    }
+
+    header {
+        position: relative;
     }
 }
 
