--- a/css/contact.css
+++ b/css/contact.css
@@ -1,31 +1,34 @@
 /* Main CSS Style Sheet */
 
-main{
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
+#contact-title {
+    padding-top: 20px;
+    width: 100%;
 }
 
-#title{
+#contact-us {
     color: white;
-    box-sizing: content-box;
-    padding:0.1px 5px 0.1px 5px;
-    background-color: rgba(80, 13, 104,1);
-    text-align: left;
-    max-width: 120px;
+    display: block;
+    background-color: #791D7E;
+    text-align: center;
+    padding: 8px;
+    margin: 0;
+    /*height: 30px;*/
+    width: 130px;
 }
 
-#para{
+#para-block {
+    width: 100%;
+}
+
+#para {
     text-align: justify;
-    margin: 30px;
-    font: Arial;
 }
 
 .titleFormat{
     color: white;
     box-sizing: content-box;
     padding: 5px 5px 5px 5px;
-    background-color: rgba(80, 13, 104, 1);
+    background-color: #791D7E;
     max-width: auto;
 }
 
@@ -35,32 +38,66 @@ main{
     margin: 2%;
 }
 
+#contacts {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
 #contact1{
-    width: 20%;
-    float: left;
-    margin: 3%;
+    width: 30%;
+    /*margin: 3%;*/
+    /*background-color: crimson;*/
+    display: inline-block;
+    /*padding: 8px;*/
 }
 
 #contact2{
-    width: 20%;
+    width: 35%;
     display: inline-block;
-    margin: 3%;
+    /*margin: 3%;*/
+    /*background-color: burlywood;*/
+    /*padding: 8px;*/
 }
 
 #contact3{
-    width: 20%;
+    width: 30%;
     display: inline-block;
-    margin: 3%;
+    /*margin: 3%;*/
+    /*background-color: chocolate;*/
+    /*padding: 8px;*/
 }
 
+table tr td {
+    padding-top: 4px;
+}
+
+#contact-info {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /*background-color: greenyellow;*/
+    margin-top: 40px;
+}
 
 #address {
-    float: left;
-    margin: 3%;
+    width: 45%;
+    margin: 10px;
+    /*background-color: crimson;*/
+}
+
+#telephone {
+    width: 45%;
+    margin: 10px;
+    /*background-color: burlywood;*/
 }
 
 #GmapLink{
-    display: inline-block;
-    margin: 3%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: block;
+    width: 100%;
 }
 
