--- a/css/News2-style.css
+++ b/css/News2-style.css
@@ -9,13 +9,13 @@ main {
 }
 
 h2 {
-    max-width: 670px;;
+    max-width: 500px;;
     text-align: center;
     background-color: #791D7E;
     color: white;
 }
 
-#cybersec {
+#aberdeen-company {
     float: right;
     margin: 10px;
 }
@@ -23,7 +23,7 @@ h2 {
 #article {
     float: right;
     margin-right: 50px;
-   text-align: justify;
+    text-align: justify;
 }
 
 #release {
