--- a/css/linkstyle.css
+++ b/css/linkstyle.css
@@ -78,13 +78,20 @@ main{
     padding: 10px;
 }
 
+.images:focus>h2,
 .images:hover>h2{
     width:96%;
     background-color: #791D7E;
     opacity: 0.7;
 }
 
-.images2:hover>h2{
+
+.images2:focus>h2 {
+    border: solid 3px #500d68;
+}
+
+
+.images2:hover>h2 {
     width:91%;
     background-color: #791D7E;
     opacity: 0.7;
